feat: setup tailwind config and custom css

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -2,12 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>chapter-verse-network</title>
+    <meta
+      name="description"
+      content="Chapter verse network (CVN) is a platform to share Books,
+and connect readers. Join our community of book lovers to share your collection, borrow from others, and discover your next favorite read."
+    />
+    <meta name="author" content="KeiK23" />
+
+    <meta property="og:title" content="chapter-verse-network" />
+    <meta property="og:description" content="Chapter verse network (CVN)" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
+    <link href="./src/index.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
