--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>chapter-verse-network</title>
+    <title>Chapter & Verse</title>
     <meta
       name="description"
-      content="Chapter verse network (CVN) is a platform to share Books,
-and connect readers. Join our community of book lovers to share your collection, borrow from others, and discover your next favorite read."
+      content="Chapter & Verse (C&V) is a community-based platform for book lovers to share, borrow, and discover books. Connect with fellow readers and expand your literary horizons."
     />
     <meta name="author" content="KeiK23" />
 
-    <meta property="og:title" content="chapter-verse-network" />
-    <meta property="og:description" content="Chapter verse network (CVN)" />
+    <meta property="og:title" content="Chapter & Verse" />
+    <meta property="og:description" content="Chapter & Verse (C&V)" />
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
